--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 
 </head>
 <body>
-    
+    <h1>WEB APP LIBRE - FIREBASE: FIRESTORE</h1>
+    <div class="content">
+        <form id="add-book-form">
+            <input type="text" name="autor" placeholder="Nome do Autor">
+            <input type="text" name="titulo" placeholder="Titulo do Livro">
+            <button>CADASTRAR</button>
+        </form>
+        <ul id="book-list"></ul>
+    </div>
 </body>
 
     <!-- IMPORT DO SDK DO FIREBASE --> 
